--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,15 @@ version = project.mod_version
 group = project.maven_group
 
 base {
-	archivesName = project.archives_base_name
+        archivesName = project.archives_base_name
+}
+
+sourceSets {
+        main {
+                resources {
+                        srcDir "src/main/generated"
+                }
+        }
 }
 
 repositories {
