Enable debug logging for runClient

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ fabricApi {
 
 loom {
         runs {
+                client {
+                        client()
+                        vmArg "-Dfabric.log.level=debug"
+                }
                 gametest {
                         server()
                         name "Game Test"
