new rotten crop registries

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ loom {
                         vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/reports/gametest/test-results.txt"
                 }
                 datagen {
-                    programArgs "--mod", "gardenkingmod", "--mod", "croptopia"
+                    programArgs "--mod", "gardenkingmod"
             }
         }
 }
