--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,9 @@ dependencies {
         // Fabric API. This is technically optional, but you probably want it anyway.
         modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-        modImplementation "curse.maven:croptopia-415438:4997461"
+        modImplementation "com.epherical.croptopia:croptopia-fabric-1.20.1:${project.croptopia_version}"
 
-        modImplementation "curse.maven:epherolib-885449:4949797"
+        modImplementation "com.epherical.croptopia:epherolib:${project.epherolib_version}"
 
         modImplementation "curse.maven:jei-238222:6600309"
 
