--- a/build.gradle
+++ b/build.gradle
@@ -59,11 +59,13 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
         // Fabric API. This is technically optional, but you probably want it anyway.
-        modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+        modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
+                exclude module: "fabric-convention-tags-v1"
+        }
 
-        modImplementation "curse.maven:croptopia-415438:4997461"
+        modImplementation "com.epherical.croptopia:croptopia-fabric-1.20.1:${project.croptopia_version}"
 
-        modImplementation "curse.maven:epherolib-885449:4949797"
+        modImplementation "com.epherical.croptopia:epherolib:${project.epherolib_version}"
 
         modImplementation "curse.maven:jei-238222:6600309"
 
