--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ archives_base_name=gardenkingmod
 fabric_version=0.92.6+1.20.1
 croptopia_version=3.0.3
 epherolib_version=1.2.0
+
+# Set to true to use the Croptopia Maven (https://maven.croptopia.com) instead of Modrinth Maven.
+# useCroptopiaMaven=false
