--- a/build.gradle
+++ b/build.gradle
@@ -68,9 +68,7 @@ dependencies {
 
 
 // Fabric API. This is technically optional, but you probably want it anyway.
-    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
-        exclude module: "fabric-convention-tags-v1"
-    }
+    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
 
 
 // Croptopia (1.20.1 Fabric 3.0.3, via CurseMaven)
